--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,20 +1,14 @@
+html {
+    font-size: 37px;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.portfolio-container {
-    display: grid;
-    grid-template-columns: repeat(5, [col] 1fr);
-    grid-template-rows: auto auto 1fr 1fr 1 1fr;
-}
-
 .bar {
-    grid-column-start: 1;
-    grid-column-end: 6;
-    grid-row-start: 1;
-    grid-row-end: 1;
     background-color: #0c0c3f;
     height: 20vh;
     width: auto;
@@ -22,101 +16,66 @@
 
 /* Intro Styles */
 .intro-title {
-    grid-column-start: 1;
-    grid-column-end: 6;
-    grid-row-start: 2;
-    grid-row-end: 2;
     display: flex;
     justify-content: center;
-    font-size: 75px;
-    padding-top: 200px;
-    padding-bottom: 200px;
     font-family: 'Lato', sans-serif;
+    padding-top: 150px;
+    padding-bottom: 150px;
 }
 
-.intro-about {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 3;
-    grid-row-end: 3;
-    padding: 50px;
-    padding-top: -60px;
-    padding-left: 200px;
+.intro-about p {
+    display: flex;
 }
 
 .intro-about h2 {
     font-family: 'Montserrat', sans-serif;
-    font-size: 40px;
 }
 
 .intro-about p {
     font-family: 'Lato', sans-serif;
-    font-size: 30px;
-}
-
-.intro-picture {
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 3;
-    grid-row-end: 3;
 }
 
 .intro-picture img {
     width: 600px;
     height: 625px;
-    padding: 50px;
-    padding-right: 50px;
     justify-self: center;
     border-radius: 50%;
 }
 
+.intro-about button {
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px;
+    background-color: rgb(29, 50, 82);
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    border-radius: 7px;
+    padding: 15px 32px;
+}
+
 /* Skills Styles */
 .skill-title {
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 4;
-    grid-row-end: 4;
-    padding-top: 125px;
-    font-size: 30px;
     font-family: 'Montserrat', sans-serif;
-    padding-bottom: 50px;
     display: flex;
     justify-content: center;
 }
 
 .skills-container {
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 5;
-    grid-row-end: 5;
     display: flex;
     justify-content: space-around;
-    padding-bottom: 125px;
 }
 
 .skills-container h3 {
-    font-size: 30px;
-    padding-left: 30px;
-    padding-bottom: 10px;
     font-family: 'Montserrat', sans-serif;
 }
 
 .skills-container li {
-    font-size: 25px;
-    padding-left: 25px;
     font-family: 'Lato', sans-serif;
     list-style-type: none;
-    padding-bottom: 6px;
-    padding-left: 40px;
 }
 
 /* Project Styles */
 .project-container {
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 6;
-    grid-row-end: 6;
-    font-size: 30px;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -125,13 +84,13 @@
     justify-content: center;
 }
 
+a.card, a.card:hover {
+    color: inherit;
+}
+
+
 /* Contact Styles */
 .contact-container {
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 7;
-    grid-row-end: 7;
-    font-size: 30px;
     font-family: 'Montserrat', sans-serif;
 }
 
