--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,17 +1,7 @@
-html {
-    font-size: 37px;
-}
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-.bar {
-    background-color: #0c0c3f;
-    height: 20vh;
-    width: auto;
 }
 
 /* Intro Styles */
@@ -19,21 +9,115 @@ html {
     display: flex;
     justify-content: center;
     font-family: 'Lato', sans-serif;
-    padding-top: 150px;
-    padding-bottom: 150px;
+    padding-top: 300px;
+    padding-bottom: 300px;
+    font-size: 125px;
+    background-color: black;
+    color: white;
 }
 
-.intro-about p {
-    display: flex;
+.ml11 .text-wrapper {
+    position: relative;
+    display: inline-block;
+    padding-top: 0.1em;
+    padding-right: 0.05em;
+    padding-bottom: 0.15em;
+  }
+  
+.ml11 .line {
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    height: 100%;
+    width: 3px;
+    background-color: #fff;
+    transform-origin: 0 50%;
+}
+
+.ml11 .line1 { 
+    top: 0; 
+    left: 0;
+}
+
+.ml11 .letter {
+    display: inline-block;
+    line-height: 1em;
+}
+
+/* About Me */
+.intro-about {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: 1fr;
+    grid-template-areas: 
+    "intro-text intro-picture";
+    padding-top: 300px;
+    padding-bottom: 300px;
+}
+
+.intro-text {
+    grid-area: intro-text;
+    margin-left: 300px;
+    padding-top: 50px;
+}
+
+.intro-picture {
+    grid-area: intro-picture;
+    margin-right: 300px;
 }
 
 .intro-about h2 {
     font-family: 'Montserrat', sans-serif;
+    font-size: 70px;
 }
 
 .intro-about p {
     font-family: 'Lato', sans-serif;
+    font-size: 35px;
 }
+
+.button{
+    display: block;
+    width: 200px;
+    height: 40px;
+    line-height: 40px;
+    font-size: 20px;
+    font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
+    text-decoration: none;
+    color: #333;
+    border: 2px solid #333;
+    letter-spacing: 2px;
+    text-align: center;
+    position: relative;
+    transition: all .35s;
+    margin-top: 15px;
+  }
+  
+  .button span{
+    position: relative;
+    z-index: 2;
+  }
+  
+  .button:after{
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: #000b4b;
+    transition: all .35s;
+  }
+  
+  .button:hover{
+    color: #fff;
+  }
+  
+  .button:hover:after{
+    width: 100%;
+  }
+
 
 .intro-picture img {
     width: 600px;
@@ -42,20 +126,10 @@ html {
     border-radius: 50%;
 }
 
-.intro-about button {
-    text-decoration: none;
-    text-align: center;
-    font-size: 20px;
-    background-color: rgb(29, 50, 82);
-    color: white;
-    font-family: 'Montserrat', sans-serif;
-    border-radius: 7px;
-    padding: 15px 32px;
-}
-
 /* Skills Styles */
 .skill-title {
     font-family: 'Montserrat', sans-serif;
+    font-size: 50px;
     display: flex;
     justify-content: center;
 }
@@ -63,31 +137,36 @@ html {
 .skills-container {
     display: flex;
     justify-content: space-around;
+    padding-top: 50px;
 }
 
 .skills-container h3 {
     font-family: 'Montserrat', sans-serif;
+    font-size: 25px;
 }
 
 .skills-container li {
     font-family: 'Lato', sans-serif;
     list-style-type: none;
+    font-size: 20px;
 }
 
 /* Project Styles */
 .project-container {
     font-family: 'Montserrat', sans-serif;
+    padding-top: 300px;
+    padding-bottom: 300px;
 }
 
 .project-container h3{
     display: flex;
     justify-content: center;
+    font-size: 70px;
 }
 
-a.card, a.card:hover {
-    color: inherit;
+.project-card {
+    display: flex;
 }
-
 
 /* Contact Styles */
 .contact-container {
