--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 
     <!-- CSS -->
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css">
-
+    <link href="{% static 'css/styles2.scss' %}" rel="stylesheet" type="text/css">
     <title>Nathaniel's Web Portfolio</title>
   </head>
   <body>
@@ -16,19 +16,16 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+      @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,800);
+      @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700');
+      @import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
     </style>
     
+    <!-- Intro -->
     <div class="portfolio-container">
-      <div class="container">
         <div class="intro-title">
-          <h1 class="ml11">
-            <span class="text-wrapper">
-              <span class="line line1"></span>
-              <span class="letters">Hi I'm Nathaniel</span>
-            </span>
-          </h1>
+          <h1 class="ml12">Hi, I'm Nathaniel</h1>
         </div>
-      </div>
 
       <div class="intro-about">
         <div class="intro-text">
@@ -39,21 +36,20 @@
           I am a motivated learner who is seeking professional opportunities to solve problems 
           and create meaningful applications/services.
           </p>
-          <section class="cd-section">
-          <!-- section content here -->
-            <div class="cd-modal-action">
-                <a href="#0" class="btn" data-type="modal-trigger">My Resume</a>
-                <span class="cd-modal-bg"></span>
-            </div>
 
-            <div class="cd-modal">
-                <div class="cd-modal-content">
-                  <a href="images/Resume_2020.pdf"><a>
-                </div>
+          <div class="page">
+            <div class="page__container">
+              <a href="#popup-article" id="myBtn" class="btn" data-type="modal-trigger" data-hover="click me!"><div>My Resume</div></a>
             </div>
-
-            <a href="#0" class="cd-modal-close">Close</a>
-          </section>
+          </div>
+          <div id="popup-article" class="popup">
+            <div class="popup__block"  style="overflow:hidden">
+              <h1 class="popup__title">
+                <iframe src="{% static 'images/Resume_2020.pdf' %}" width="1050px;" height="1200px;"></iframe>
+              </h1>
+              <a href="#" class="popup__close">close</a>
+            </div>
+          </div>
         </div>
         <div class="intro-picture">
           <img src="{% static 'images/portfolio.jpg' %}">
@@ -61,6 +57,8 @@
       </div>
 
 
+      
+      <!-- Skills Section -->
       <div class="skill-title">
           <h2>Skills</h2>
       </div>
@@ -77,11 +75,12 @@
             </ul>
           </div>
           <div class="skill-framework">
-            <h3>Frameworks</h3>
+            <h3>Frameworks/Libraries</h3>
             <ul>
                 <li>Django</li>
+                <li>jQuery</li>
+                <li>Anime.js</li>
                 <li>React</li>
-                <li></li>
             </ul>
           </div>
           <div class="skill-soft">
@@ -95,20 +94,116 @@
           </div>
       </div>
 
+      <!--Project Section -->
       <div class="project-container">
         <div class="project-title">
           <h3>Projects</h3>
-          
+          <section class="cards">
+            <article class="card card--1">
+              <div class="card__info-hover">
+              </div>
+              
+              <div class="card__img"></div>
+              <a href="https://kyrieucsc.herokuapp.com/home/" class="card_link">
+                <div class="card__img--hover"></div>
+              </a>
+              <div class="card__info">
+                <span class="card__category">Django | HTML5 | CSS3 | Javascript</span>
+                <h4 class="card__title">Kyrie Fellowship Website</h4>
+                <span class="card__by">by<a href="#" class="card__author" title="author"> Nathaniel Chang</a></span>
+              </div>
+            </article>
+              
+            <article class="card card--2">
+              <div class="card__info-hover">
+                
+              </div>
+              <div class="card__img"></div>
+              <a href="https://github.com/namachan-1/3dmaze-webgl-js" class="card_link">
+                <div class="card__img--hover"></div>
+              </a>
+              <div class="card__info">
+                <span class="card__category">Javacsript | CSS3 | HTML5 | WebGL</span>
+                <h4 class="card__title">3D Maze Game</h4>
+                <span class="card__by">by <a href="#" class="card__author" title="author">Nathaniel Chang</a></span>
+              </div>
+            </article>  
+
+            <article class="card card--3">
+              <div class="card__info-hover">
+                
+              </div>
+              <div class="card__img"></div>
+              <a href="#" class="card_link">
+                <div class="card__img--hover"></div>
+              </a>
+              <div class="card__info">
+                <span class="card__category">Three.js | CSS3 | HTML5</span>
+                <br><br>
+                <h4 class="card__title">Mini 3D World</h4>
+                <span class="card__by">by <a href="#" class="card__author" title="author">Nathaniel Chang</a></span>
+              </div>
+            </article>  
+          </section>
+
+          <section class="cards">
+            <article class="card card--4">
+              <div class="card__info-hover">
+              </div>
+              
+              <div class="card__img"></div>
+              <a href="https://github.com/namachan-1/affirmative-action" class="card_link">
+                <div class="card__img--hover"></div>
+              </a>
+              <div class="card__info">
+                <span class="card__category">Python (Matplotlib, NumPy, Pandas) </span>
+                <h4 class="card__title">Data Mining/Analysis</h4>
+                <span class="card__by">by<a href="#" class="card__author" title="author"> Nathaniel Chang, Joshua Cheung, Theresa Tan</a></span>
+              </div>
+            </article>
+              
+            <article class="card card--5">
+              <div class="card__info-hover">
+                
+              </div>
+              <div class="card__img"></div>
+              <a href="https://github.com/namachan-1/portfolio-web" class="card_link">
+                <div class="card__img--hover"></div>
+              </a>
+              <div class="card__info">
+                <span class="card__category">Django | JS (Anime.js, JQuery) | CSS3 | HTML5</span>
+                <h4 class="card__title">Django Portfolio</h4>
+                <span class="card__by">by <a href="#" class="card__author" title="author">Nathaniel Chang</a></span>
+              </div>
+            </article>  
+
+            <article class="card card--6">
+              <div class="card__info-hover">
+                
+              </div>
+              <div class="card__img"></div>
+              <a href="#" class="card_link">
+                <div class="card__img--hover"></div>
+              </a>
+              <div class="card__info">
+                <span class="card__category"> Python | MySQL</span>
+                <h4 class="card__title">New Project (Coming Soon!)</h4>
+                <span class="card__by">by <a href="#" class="card__author" title="author">Nathaniel Chang</a></span>
+              </div>
+            </article>  
+          </section>
         </div>
-
-    
-          <div class="contact-container">
-            <h3>Contact</h3>
-          </div>
       </div>
-  </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <!-- Contact Section -->
+      <div class="contact-container">
+        <h3>Contact</h3>
+      </div>
+    </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.ui.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   <script src="{% static "js/app.js" %}" type="text/javascript"></script>
   <script src="{% static "js/card.js" %}" type="text/javascript"></script>
