--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
     <!-- CSS -->
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/styles2.scss' %}" rel="stylesheet" type="text/css">
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+    
     <title>Nathaniel's Web Portfolio</title>
   </head>
   <body>
@@ -26,11 +28,18 @@
         <div class="intro-title">
           <h1 class="ml12">Hi, I'm Nathaniel</h1>
         </div>
+        <div class="intro-scroll">
+          <svg class="chevron" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-chevron-double-down" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+            <path fill-rule="evenodd" d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+          </svg>
+        </div>
+        
 
       <div class="intro-about">
         <div class="intro-text">
-          <h2>About Me</h2>
-          <p>
+          <h2 data-aos="fade-right">About Me</h2>
+          <p data-aos="fade-right" data-aos-duration="600">
           I am a new Grad Software Engineer who enjoys coding and helping others.
           I have experience in web development through self-initiated projects. 
           I am a motivated learner who is seeking professional opportunities to solve problems 
@@ -39,13 +48,13 @@
 
           <div class="page">
             <div class="page__container">
-              <a href="#popup-article" id="myBtn" class="btn" data-type="modal-trigger" data-hover="click me!"><div>My Resume</div></a>
+              <a data-aos="fade-right" data-aos-duration="1000" href="#popup-article" id="myBtn" class="btn" data-type="modal-trigger" data-hover="click me!"><div>My Resume</div></a>
             </div>
           </div>
           <div id="popup-article" class="popup">
             <div class="popup__block"  style="overflow:hidden">
               <h1 class="popup__title">
-                <iframe src="{% static 'images/Resume_2020.pdf' %}" width="1050px;" height="1200px;"></iframe>
+                <iframe src="{% static 'images/Resume_2020.pdf' %}"></iframe>
               </h1>
               <a href="#" class="popup__close">close</a>
             </div>
@@ -56,15 +65,15 @@
         </div>
       </div>
 
-
+      <!-- Cool Animation -->
       
       <!-- Skills Section -->
       <div class="skill-title">
-          <h2>Skills</h2>
+          <h2 data-aos="fade-left">Skills</h2>
       </div>
 
       <div class="skills-container">
-          <div class="skill-languages">
+          <div data-aos="fade-down" class="skill-languages">
             <h3>Languages</h3>
             <ul>
                 <li>Python</li>
@@ -74,7 +83,7 @@
                 <li>C</li>
             </ul>
           </div>
-          <div class="skill-framework">
+          <div data-aos="fade-down" class="skill-framework" data-aos-duration="800">
             <h3>Frameworks/Libraries</h3>
             <ul>
                 <li>Django</li>
@@ -83,7 +92,7 @@
                 <li>React</li>
             </ul>
           </div>
-          <div class="skill-soft">
+          <div data-aos="fade-down" class="skill-soft" data-aos-duration="1200">
             <h3>Soft Skills</h3>
             <ul>
                 <li>Leadership</li>
@@ -97,9 +106,9 @@
       <!--Project Section -->
       <div class="project-container">
         <div class="project-title">
-          <h3>Projects</h3>
+          <h3 data-aos="fade-right">Projects</h3>
           <section class="cards">
-            <article class="card card--1">
+            <article class="card card--1" data-aos="zoom-out-up" data-aos-duration="700">
               <div class="card__info-hover">
               </div>
               
@@ -114,7 +123,7 @@
               </div>
             </article>
               
-            <article class="card card--2">
+            <article class="card card--2" data-aos="zoom-out-up" data-aos-duration="800">
               <div class="card__info-hover">
                 
               </div>
@@ -129,7 +138,7 @@
               </div>
             </article>  
 
-            <article class="card card--3">
+            <article class="card card--3" data-aos="zoom-out-up" data-aos-duration="900">
               <div class="card__info-hover">
                 
               </div>
@@ -147,7 +156,7 @@
           </section>
 
           <section class="cards">
-            <article class="card card--4">
+            <article class="card card--4" data-aos="zoom-out-up" data-aos-duration="1000">
               <div class="card__info-hover">
               </div>
               
@@ -162,7 +171,7 @@
               </div>
             </article>
               
-            <article class="card card--5">
+            <article class="card card--5" data-aos="zoom-out-up" data-aos-duration="1100">
               <div class="card__info-hover">
                 
               </div>
@@ -177,7 +186,7 @@
               </div>
             </article>  
 
-            <article class="card card--6">
+            <article class="card card--6" data-aos="zoom-out-up" data-aos-duration="1200">
               <div class="card__info-hover">
                 
               </div>
@@ -197,16 +206,77 @@
 
       <!-- Contact Section -->
       <div class="contact-container">
-        <h3>Contact</h3>
+        <h3 data-aos="fade-left" data-aos-duration="500">Contact Me</h3>
+        <div class="svg-links">
+          <a href="https://www.linkedin.com/in/nathanielcha/" style="text-decoration: none" data-aos="fade-right" data-aos-duration="600">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+              <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+            </svg>
+          </a> 
+          <a href="https://github.com/namachan-1" style="text-decoration: none" data-aos="fade-right" data-aos-duration="700">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+              <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+            </svg>
+          </a> 
+        </div>
+
+        {% if first_name %}
+          <center>
+            <br><br><br><br><br>
+            <h5> Thanks {{ first_name }}</h5>
+            <p> We will get back  to you as soon as possible! </p>
+            <br><br><br><br><br>
+          </center>
+        
+        {% else %}
+          <div class="contact-form"> 
+            <div class="contact-form-info" data-aos="zoom-out-up" data-aos-duration="800">
+                <!-- Allows form to revert back to itself -->
+                <form class="form" action="{% url 'home' %}" method="post">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label class="label-1" for="fname">First Name:  </label>
+                        <br/>
+                        <input type="text" name="first-name" class="form-control" id="fname">
+                    </div>
+                    <div class="form-group">
+                        <label class="label-2" for="lname">Last Name:  </label>
+                        <br/>
+                        <input type="text" name="last-name" class="form-control" id="lname">
+                    </div>
+
+                    <div class="form-group">
+                        <label class="label-3" for="email">Email Address: </label>
+                        <br/>
+                        <input type="email" name="email" class="form-control" id="email">
+                    </div>
+
+                    <div class="form-group">
+                        <label class="label-4" for="questions">Message:  </label>
+                        <br/>
+                        <textarea class="form-control" name="message" id="questions"rows="3"></textarea>
+                    </div>
+
+                    <div class="contact-form-btn">
+                        <button type="submit" class="submit-btn" style="text-decoration: none;">Submit</button>
+                    </div>
+                </form>
+                <br><br><br><br><br>
+            </div>
+          </div>
+        {% endif %}
       </div>
+      <br><br><br><br><br>
     </div>
 
+  <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.ui.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   <script src="{% static "js/app.js" %}" type="text/javascript"></script>
-  <script src="{% static "js/card.js" %}" type="text/javascript"></script>
+  <script src="{% static "js/modal.js" %}" type="text/javascript"></script>
+  <script src="{% static "js/scroll.js" %}" type="text/javascript"></script>
   {% endblock %}
 
   </body>
