--- a/templates/base.html
+++ b/templates/base.html
@@ -68,39 +68,41 @@
       <!-- Cool Animation -->
       
       <!-- Skills Section -->
-      <div class="skill-title">
-          <h2 data-aos="fade-left">Skills</h2>
-      </div>
+      <div class="skill">
+        <div class="skill-title">
+            <h2 data-aos="fade-left">Skills</h2>
+        </div>
 
-      <div class="skills-container">
-          <div data-aos="fade-down" class="skill-languages">
-            <h3>Languages</h3>
-            <ul>
-                <li>Python</li>
-                <li>Javascript</li>
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>C</li>
-            </ul>
-          </div>
-          <div data-aos="fade-down" class="skill-framework" data-aos-duration="800">
-            <h3>Frameworks/Libraries</h3>
-            <ul>
-                <li>Django</li>
-                <li>jQuery</li>
-                <li>Anime.js</li>
-                <li>React</li>
-            </ul>
-          </div>
-          <div data-aos="fade-down" class="skill-soft" data-aos-duration="1200">
-            <h3>Soft Skills</h3>
-            <ul>
-                <li>Leadership</li>
-                <li>Problem-Solving</li>
-                <li>Collaboration</li>
-                <li></li>
-            </ul>
-          </div>
+        <div class="skills-container">
+            <div data-aos="fade-down" class="skill-languages">
+              <h3>Languages</h3>
+              <ul>
+                  <li>Python</li>
+                  <li>Javascript</li>
+                  <li>HTML5</li>
+                  <li>CSS3</li>
+                  <li>C</li>
+              </ul>
+            </div>
+            <div data-aos="fade-down" class="skill-framework" data-aos-duration="800">
+              <h3>Frameworks/Libraries</h3>
+              <ul>
+                  <li>Django</li>
+                  <li>jQuery</li>
+                  <li>Anime.js</li>
+                  <li>React</li>
+              </ul>
+            </div>
+            <div data-aos="fade-down" class="skill-soft" data-aos-duration="1200">
+              <h3>Soft Skills</h3>
+              <ul>
+                  <li>Leadership</li>
+                  <li>Problem-Solving</li>
+                  <li>Collaboration</li>
+                  <li></li>
+              </ul>
+            </div>
+        </div>
       </div>
 
       <!--Project Section -->
