fixed scrolling and added animated loading styles

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,143 @@
       @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700');
       @import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
     </style>
-    
+
+    <!-- Loading Screen -->
+    <div class="preloader">
+        <div class="animation01">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+    <div class="animation02">
+        <div></div>
+        <div></div>
+    </div>
+    <div class="animation03">
+        <div class="circle">
+            <div class="circle_element01"></div>
+        </div>
+        <div class="circle">
+            <div class="circle_element02"></div>
+        </div>
+        <div class="circle">
+            <div class="circle_element03"></div>
+        </div>
+        <div class="animation04">
+            <div class="line_wrapper line_wrapper01">
+                <span class="line line01"></span>
+            </div>
+            <div class="rotate45">
+                <div class="line_wrapper line_wrapper02">
+                    <span class="line line02"></span>
+                </div>
+            </div>
+            <div class="line_wrapper line_wrapper03">
+                <span class="line line03"></span>
+            </div>
+            <div class="rotate135">
+                <div class="line_wrapper line_wrapper04">
+                    <span class="line line04"></span>
+                </div>
+            </div>
+            <div class="line_wrapper line_wrapper05">
+                <span class="line line05"></span>
+            </div>
+            <div class="rotate-135">
+                <div class="line_wrapper line_wrapper06">
+                    <span class="line line06"></span>
+                </div>
+            </div>
+            <div class="line_wrapper line_wrapper07">
+                <span class="line line07"></span>
+            </div>
+            <div class="rotate-45">
+                <div class="line_wrapper line_wrapper08">
+                    <span class="line line08"></span>
+                </div>
+            </div>
+        </div>
+        <div class="animation05">
+            <div class="double_wrapper02 green02">
+                <div class="double_wrapper01 green01">
+                    <div class="double_block green00"></div>
+                </div>
+            </div>
+            <div class="double_wrapper02 navy02">
+                <div class="double_wrapper01 navy01">
+                    <div class="double_block navy00"></div>
+                </div>
+            </div>
+            <div class="double_wrapper02 yellow02">
+                <div class="double_wrapper01 yellow01">
+                    <div class="double_block yellow00"></div>
+                </div>
+            </div>
+            <div class="double_wrapper02 blue02">
+                <div class="double_wrapper01 blue01">
+                    <div class="double_block blue00"></div>
+                </div>
+            </div>
+            <div class="double_wrapper02 red02">
+                <div class="double_wrapper01 red01">
+                    <div class="double_block red00"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="animation06">
+        <div class="rhombus05">
+            <div class="rhombus04">
+                <div class="rhombus03">
+                    <div class="rhombus02">
+                        <div class="rhombus01"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="animation07">
+        <div class="circle">
+            <div class="circle_element01"></div>
+        </div>
+        <div class="line_wrapper line_wrapper01">
+            <span class="line line01"></span>
+        </div>
+        <div class="rotate60">
+            <div class="line_wrapper line_wrapper02">
+                <span class="line line02"></span>
+            </div>
+        </div>
+        <div class="rotate120">
+            <div class="line_wrapper line_wrapper03">
+                <span class="line line03"></span>
+            </div>
+        </div>
+        <div class="line_wrapper line_wrapper04">
+            <span class="line line04"></span>
+        </div>
+        <div class="rotate-120">
+            <div class="line_wrapper line_wrapper05">
+                <span class="line line05"></span>
+            </div>
+        </div>
+        <div class="rotate-60">
+            <div class="line_wrapper line_wrapper06">
+                <span class="line line06"></span>
+            </div>
+        </div>
+    </div>
+    <div class="animation08">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+    </div>
+
     <!-- Intro -->
     <div class="portfolio-container">
         <div class="intro-title">
@@ -37,7 +173,7 @@
         
 
       <div class="intro-about">
-        <div class="intro-text">
+        <div class="intro-text" name="intro-text">
           <h2 data-aos="fade-right">About Me</h2>
           <p data-aos="fade-right" data-aos-duration="600">
           I am a new Grad Software Engineer who enjoys coding and helping others.
@@ -56,7 +192,7 @@
               <h1 class="popup__title">
                 <iframe src="{% static 'images/Resume_2020.pdf' %}"></iframe>
               </h1>
-              <a href="#" class="popup__close">close</a>
+              <a href="#intro-text" class="popup__close">close</a>
             </div>
           </div>
         </div>
@@ -272,13 +408,18 @@
     </div>
 
   <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.ui.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   <script src="{% static "js/app.js" %}" type="text/javascript"></script>
   <script src="{% static "js/modal.js" %}" type="text/javascript"></script>
   <script src="{% static "js/scroll.js" %}" type="text/javascript"></script>
+  <script>
+      window.onbeforeunload = function () {
+      window.scrollTo(0, 0);
+    }; 
+  </script>
   {% endblock %}
 
   </body>
