--- a/templates/base.html
+++ b/templates/base.html
@@ -209,7 +209,7 @@
 
         <!-- Profile Picture-->
         <div class="intro-picture">
-          <img src="{% static 'images/portfolio.jpg' %}">
+          <img src="{% static 'images/portfolio.JPG' %}">
         </div>
       </div>
       
