--- a/templates/base.html
+++ b/templates/base.html
@@ -200,7 +200,7 @@
           <div id="popup-article" class="popup">
             <div class="popup__block"  style="overflow:hidden">
               <h1 class="popup__title">
-                <iframe src="{% static 'images/Resume_2020.pdf' %}"></iframe>
+                <iframe src="{% static 'images/resume_2021.pdf' %}"></iframe>
               </h1>
               <a href="#intro-text" class="popup__close">close</a>
             </div>
