--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2119,4 +2119,14 @@ textarea {
         width: 400px;
         height: 200px;
     }
+
+    @media only screen and (min-device-height: 360px) and (min-device-width: 760px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 4){
+        .intro-title {
+            padding-top: 50px;
+        }
+
+        .ml12 {
+            font-size: 15px;
+        }
+    }
 }
