--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2122,15 +2122,25 @@ textarea {
 
     @media only screen and (max-width: 500px) {
         .intro-title {
-            padding-top: 50px;
+            padding-top: 200px;
         }
 
         .ml12 {
-            font-size: 10px;
+            font-size: 20px;
         }
 
-        div {
-            flex-basis: 33%;
+        .intro-text {
+            text-align: center;
+        }
+
+        .intro-picture {
+            padding-right: 100px;
+            width: 40px;
+            height: 40px;
+        }
+
+        .skills-container {
+            flex-direction: column;
         }
     }
 }
