--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1978,7 +1978,6 @@ svg:visited svg:hover{
     font-size: 20px;
     width: 800px;
     height: 400px;
-
 }
 
 .form-group {
@@ -2122,7 +2121,7 @@ textarea {
 
     @media only screen and (max-width: 500px) {
         .intro-title {
-            padding-top: 200px;
+            padding-top: 300px;
         }
 
         .ml12 {
@@ -2141,6 +2140,16 @@ textarea {
 
         .skills-container {
             flex-direction: column;
+            justify-content: center;
+        }
+
+        .project-container span {
+            display: none;
+        }
+
+        .form-group textarea {
+            width: 600px;
+            height: 300px;
         }
     }
 }
