--- a/templates/base.html
+++ b/templates/base.html
@@ -200,7 +200,7 @@
             </div>
           </div>
           <div id="popup-article" class="popup">
-            <div class="popup__block"  style="overflow:hidden">
+            <div class="popup__block">
               <h1 class="popup__title">
                 <iframe src="{% static 'images/resume_2021.pdf' %}"></iframe>
               </h1>
