fixing styles of fonts

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2125,7 +2125,7 @@ textarea {
         }
 
         .ml12 {
-            font-size: 20px;
+            font-size: 25px;
         }
 
         .intro-text {
@@ -2133,14 +2133,14 @@ textarea {
         }
 
         .intro-picture {
-            padding-right: 100px;
+            padding-right: 400px;
             width: 40px;
             height: 40px;
         }
 
         .skills-container {
             flex-direction: column;
-            justify-content: center;
+            padding-left: 200px;
         }
 
         .project-container span {
