--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2129,17 +2129,22 @@ textarea {
         }
 
         .intro-about {
-            padding-right: 10px;
             display: flex;
             flex-direction: column;
         }
 
         .intro-text {
+            padding-right: 20px;
             text-align: center;
         }
 
+        iframe {
+            width: 300px;
+            height: 400px;
+        }
+
         .intro-picture {
-            padding-right: 400px;
+            padding-right: 20px;
             width: 40px;
             height: 40px;
         }
