--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2134,7 +2134,7 @@ textarea {
         }
 
         .intro-text {
-            padding-right: 85px;
+            padding-right: 95px;
             text-align: center;
         }
 
@@ -2144,7 +2144,7 @@ textarea {
         }
 
         .intro-picture {
-            padding-left: 70px;
+            padding-left: 85px;
             width: 40px;
             height: 40px;
         }
@@ -2156,12 +2156,12 @@ textarea {
 
         .skill-soft li{
             text-align: center; 
-            padding-right: 100px;
+            padding-right: 150px;
         }
 
         .skills-container h3{
-            text-align: center; 
-            padding-right: 125px;
+            display: flex;
+            justify-content: center;
         }
 
         .project-container span {
