--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2138,6 +2138,10 @@ textarea {
             text-align: center;
         }
 
+        .page__container a {
+            padding-right: 15px;
+        }
+
         iframe {
             width: 300px;
             height: 400px;
@@ -2162,6 +2166,7 @@ textarea {
         .skills-container h3{
             display: flex;
             justify-content: center;
+            padding-right: 60px;
         }
 
         .project-container span {
