fixing mobile styles.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2160,6 +2160,10 @@ textarea {
             padding-right: 150px;
         }
 
+        .skill-soft li{
+            text-align: center;
+        }
+
         .project-container span {
             display: none;
         }
